# FLIWBO

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: 01_repository_tour.md  02_core_optimizer_api.md  03_integration_guide.md  04_quixbugs_walkthrough.md  05_hyperparameter_effects.md  README.md
examples/notebooks/: 01_hyperparameter_visualization.ipynb  README.md  hyperparameter_visualization.py
examples/quixbugs/: encoding_map.json  estimate_noise.py  evaluate_initial_x_points.py  export_predictions.py  features_to_spec.py  initial_x_points.csv  main.py  mas_builder.py  mas_spec.json  mcp_tools.py  mcp_utils.py  objective.py  prep_workspace.py  resource_statement.py  run_BO.py  run_agents.py  run_encoding.py  run_evaluation.py  search_space.py
src/fliwbo_core/: BO_config.py  BO_loop.py  BO_utils.py  PR_optimizer.py  __init__.py  decoder.py  discrete_space.py  optimizer.py  search_space.py  torch_gp.py  warp_optimizer.py
tests/: test_beta_schedule.py  test_optimizer_mixed.py  test_pr_optimizer.py  test_search_space.py  test_torch_gp_backend.py  test_torch_gp_ucb.py  test_torch_warp_backend.py
