[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fliwbo"
version = "0.1.0"
description = "Finite-library input-warped Bayesian optimization for discrete design spaces."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5",
    "numpy>=2.0",
    "scikit-learn>=1.6",
    "scipy>=1.15",
    "torch>=2.0",
]

[project.optional-dependencies]
quixbugs = [
    "anyio>=4.0",
    "langchain>=1.2",
    "langchain-core>=1.3",
    "langchain-openai>=1.2",
    "mcp>=1.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=5.0",
]
notebooks = [
    "matplotlib>=3.8",
    "notebook>=7.0",
]
dev = [
    "pytest>=9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
